2006-09-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lens.c: applied patch from Aurimas Juška which,
	among other changes, ports the plug-in to GimpZoomPreview
	(bug #324849).

2006-09-17  Sven Neumann  <sven@gimp.org>

	* gimpui.pc.in (Libs): added gimpmodule-2.0, removed
	gimpconfig-2.0 which is already refered to from gimp-2.0.pc.

2006-09-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: reverted Bill's change. Applying
	the delay before the selection makes as much sense as doing it
	afterwards. Do it consistently at least.

2006-09-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c: HSV and HSL now handle integer
	values the same way as the RGB and CMYK objects do, for consistency.

2006-09-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c: Use proper return value types
	for object constructors. Fixes bug #354555.

2006-09-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py
	* plug-ins/pygimp/plug-ins/gtkcons.py: let the gettext module

	* po-python/POTFILES.in
	* plug-ins/pygimp/gimpui.py: Mark a couple strings for translation
	here.

2006-09-16  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpperspectiveclonetool.c (button_press)
	* app/tools/gimpsourcetool.c (button_press): need to instruct the
	paint_core to make a copy of the projection whenever we clone from
	the same *image*, not from the same display. Fixes crash when
	cloning from the same image's projection in another view
	(bug #356209).

2006-09-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: when shooting a region, apply delay
	_after_ selecting region, applying before is useless.
	
2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added domain_register method.

	* plug-ins/pygimp/gimpfu.py: define N_(). Added an optional
	"domain" parameter to the register() method. Register the domain
	with GIMP and initialize gettext if it is specified.
